[gd_scene load_steps=19 format=2]

[ext_resource path="res://Assets/Logan.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Assets/dash_texture.png" type="Texture" id=3]
[ext_resource path="res://Scenes/trail_left_material.tres" type="Material" id=4]
[ext_resource path="res://Assets/trail_right_material.tres" type="Material" id=5]
[ext_resource path="res://Assets/dash_texture_flipped.png" type="Texture" id=6]
[ext_resource path="res://Assets/bullet.png" type="Texture" id=7]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 50, 29, 25, 29 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 75, 29, 25, 29 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 25, 29 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 25, 0, 25, 29 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 50, 0, 25, 29 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 75, 0, 25, 29 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 0, 29, 25, 29 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 25, 0, 25, 29 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 25, 29, 25, 29 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "Dying",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "Run",
"speed": 10.0
}, {
"frames": [ SubResource( 7 ) ],
"loop": true,
"name": "Jump",
"speed": 5.0
}, {
"frames": [ SubResource( 8 ) ],
"loop": true,
"name": "Dash",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ) ],
"loop": true,
"name": "Hurt",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=11]
radius = 7.71883
height = 13.2176

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Right_fire_point" type="Position2D" parent="."]
position = Vector2( 12.8512, -0.51405 )

[node name="Sprite" type="Sprite" parent="Right_fire_point"]
visible = false
position = Vector2( -0.0187988, 0.0168495 )
texture = ExtResource( 7 )

[node name="Left_fire_point" type="Position2D" parent="."]
position = Vector2( -12.851, -0.514 )

[node name="Sprite" type="Sprite" parent="Left_fire_point"]
visible = false
position = Vector2( -0.0187988, 0.0168495 )
texture = ExtResource( 7 )

[node name="Trail_left" type="Particles2D" parent="."]
position = Vector2( -5, 0 )
emitting = false
amount = 10
lifetime = 1.5
one_shot = true
speed_scale = 0.2
local_coords = false
process_material = ExtResource( 4 )
texture = ExtResource( 3 )

[node name="Trail_right" type="Particles2D" parent="."]
position = Vector2( 5, 0 )
emitting = false
amount = 10
lifetime = 1.5
one_shot = true
speed_scale = 0.2
local_coords = false
process_material = ExtResource( 5 )
texture = ExtResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 10 )
animation = "Dash"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 11 )

[node name="Dash_timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
[connection signal="timeout" from="Dash_timer" to="." method="_on_Dash_timer_timeout"]
